# simpbar

./: .gitignore  CMakeLists.txt  LICENSE  README.org
protocol/unstable/: wlr-layer-shell-unstable-v1.xml
src/: backlight.c  backlight.h  bar.c  bar.h  battery.c  battery.h  battery_history.c  battery_history.h  clock.c  clock.h  icon_loader.c  icon_loader.h  main.c  popup.c  popup.h  registry.c  registry.h  toplevel.c  toplevel.h  volume.c  volume.h  workspace.c  workspace.h
